--- a/index.html
+++ b/index.html
@@ -17,6 +17,23 @@
         <h4>Esto es un titulo H1</h4>
         <h5>Esto es un titulo H1</h5>
         <h6>Esto es un titulo H1</h6>
+        <article>
+            <h3>Parrafo 1</h3>
+            <p>
+                Esto es un parrafo 
+                
+            </p>
+            <h3>Parrafo2</h3>
+            <p>
+                Esto es el segundo parrafo 
+            </p>
+
+            <h3>Parrafo 3</h3>
+            <p>
+                Esto es el tercer parrafo 
+            </p>
+            <span>Este es un texto corto</span>>
+        </article>
         <section>Tabla</section>
         <section>Seccion 3</section>
     </main>
