explicacion de manejo de imagenes

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         <h4>Esto es un titulo H1</h4>
         <h5>Esto es un titulo H1</h5>
         <h6>Esto es un titulo H1</h6>
+        <img src="./media/BorderCollie.jfif" alt='Foto de un BorderCollie'/>
+
         <article>
             <h3>Parrafo 1</h3>
             <p>
