--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         <h4>Esto es un titulo H1</h4>
         <h5>Esto es un titulo H1</h5>
         <h6>Esto es un titulo H1</h6>
+        <a href="https://www.google.com"> este es un link externo</a>
+        <a href="./paginatest.html"> este es un link interno</a>
         <img src="./media/BorderCollie.jfif" alt='Foto de un BorderCollie'/>
 
         <article>
