Agregar explicacion de listas ordenadas y desordenadas

--- a/index.html
+++ b/index.html
@@ -9,7 +9,21 @@
 </head>
 <body>
     <header>este es el header de navegacion</header>
-    
+    <h3>Esto es una lista ordenada</h3>
+    <ol>
+        <li>Elemento2</li>
+        <li>Elemento3</li>
+        <li>Elemento4</li>
+        <li>Elemento5</li>
+    </ol>
+    <h3>Esto es una lista no ordenada</h3>
+    <ul>
+        <li>Elemento2</ulil>
+        <li>Elemento3</li>
+        <li>Elemento4</li>
+        <li>Elemento5</li>
+    </ul>
+    <div>Hola esto es una division</div>
     <main>
         <h1>Esto es un titulo H1</h1>
         <h2>Esto es un titulo H1</h2>
