Explicacion formulario, input, botones

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <h6>Esto es un titulo H1</h6>
         <a href="https://www.google.com"> este es un link externo</a>
         <a href="./paginatest.html"> este es un link interno</a>
+        <a href="./formulario.html"> este es un link al formulario</a>
         <img src="./media/BorderCollie.jfif" alt='Foto de un BorderCollie'/>
 
         <article>
