--- a/formulario.html
+++ b/formulario.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulario</title>
+    <style>
+button{background-color: red;
+color: white;}
+    </style>
 </head>
 <body>
     <a href="./index.html">regresar</a>
@@ -24,8 +28,8 @@
         <input type="checkbox"/>
         <input type="radio"/>
         <input type="file"/>
-        <button type="submit" style="color: white; background-color: tomato;">Enviar datos</button>
-        <button type="reset" style="color: green; background-color: pink;">Reiniciar</button>
+        <button type="submit" >Enviar datos</button>
+        <button type="reset">Reiniciar</button>
 
         
 
